k8s/monitoring/grafana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: monitoring
  annotations:
    #traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    cert-manager.io/cluster-issuer: selfsigned-issuer
spec:
  ingressClassName: traefik
  tls:
   - hosts:
       - grafana.dev.local
     secretName: grafana-tls #dev-local-tls
  rules:
  - host: grafana.dev.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: monitoring-grafana
            port:
              number: 80
